# example-rust-stm32

./: .gitignore  Cargo.toml  LICENSE  README.md  memory.x
.cargo/: config.toml
src/: main.rs
xtask/src/: main.rs
