[package]
name = "example-rust-stm32"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"

stm32f1xx-hal = { version = "0.11.0", features = ["stm32f103", "medium"] }

[profile.dev]
opt-level = 0
debug = true
lto = false
codegen-units = 1
strip = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
debug = false
panic = "abort"
